// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`beautify 1`] = `
"Error: 
    Object.getStack (packages/error/__tests__/index.ts:40:17)"
`;

exports[`beautify with title 1`] = `
"Error: title
    Object.<anonymous> (packages/error/__tests__/index.ts:49:17)"
`;

exports[`diagnostics 1`] = `
"🚨  [31m[1mError: message[22m[39m
[90m    Object.<anonymous> (packages/error/__tests__/index.ts:89:39)
    Promise.finally.completed (node_modules/jest-circus/build/jestadapterinit.js:1561:28)
    callAsyncCircusFn (node_modules/jest-circus/build/jestadapterinit.js:1501:10)
    _callCircusTest (node_modules/jest-circus/build/jestadapterinit.js:1011:40)
    _runTest (node_modules/jest-circus/build/jestadapterinit.js:951:3)
    null (node_modules/jest-circus/build/jestadapterinit.js:853:7)
    _runTestsForDescribeBlock (node_modules/jest-circus/build/jestadapterinit.js:866:11)
    run (node_modules/jest-circus/build/jestadapterinit.js:765:3)
    runAndTransformResultsToJestFormat (node_modules/jest-circus/build/jestadapterinit.js:1993:21)
    jestAdapter (node_modules/jest-circus/build/runner.js:111:19)
    runTestInternal (node_modules/jest-runner/build/index.js:276:16)
    runTest (node_modules/jest-runner/build/index.js:344:7)[39m"
`;

exports[`getStack: -1 1`] = `
"Error: 
    at getStack (/packages/error/__tests__/index.ts:27:16)
    at c (/packages/error/__tests__/index.ts:23:10)
    at b (/packages/error/__tests__/index.ts:19:10)
    at Object.a (/packages/error/__tests__/index.ts:32:10)
    at new Promise (<anonymous>)"
`;

exports[`getStack: 0 1`] = `
"Error: 
    at getStack (/packages/error/__tests__/index.ts:27:16)
    at c (/packages/error/__tests__/index.ts:23:10)
    at b (/packages/error/__tests__/index.ts:19:10)
    at Object.a (/packages/error/__tests__/index.ts:33:10)
    at new Promise (<anonymous>)"
`;

exports[`getStack: 1 1`] = `
"Error: 
    at getStack (/packages/error/__tests__/index.ts:27:16)
    at c (/packages/error/__tests__/index.ts:23:10)
    at b (/packages/error/__tests__/index.ts:19:10)
    at Object.a (/packages/error/__tests__/index.ts:34:10)
    at new Promise (<anonymous>)"
`;

exports[`getStack: 2 1`] = `
"Error: 
    at c (/packages/error/__tests__/index.ts:23:10)
    at b (/packages/error/__tests__/index.ts:19:10)
    at Object.a (/packages/error/__tests__/index.ts:35:10)
    at new Promise (<anonymous>)"
`;

exports[`getStack: 3 1`] = `
"Error: 
    at b (/packages/error/__tests__/index.ts:19:10)
    at Object.a (/packages/error/__tests__/index.ts:36:10)
    at new Promise (<anonymous>)"
`;

exports[`getStack: undefined 1`] = `
"Error: 
    at getStack (/packages/error/__tests__/index.ts:27:16)
    at c (/packages/error/__tests__/index.ts:23:10)
    at b (/packages/error/__tests__/index.ts:19:10)
    at Object.a (/packages/error/__tests__/index.ts:31:10)
    at new Promise (<anonymous>)"
`;

exports[`handle just the title fine 1`] = `
"multine
error
message"
`;

exports[`handle multine error message correctly 1`] = `
"Error: multine
error
message
    Object.<anonymous> (packages/error/__tests__/index.ts:58:17)"
`;

exports[`keep at least one stack line 1`] = `
"Error: 
    Promise.finally.completed (node_modules/jest-circus/build/jestadapterinit.js:1561:28)"
`;
